layalina_mobile_bootstrap/css/layalina_mobile.css
/* ... */
.content_wrap .thumb_pg ul.media-list li, .content_wrap .thumb_pg ul.media-list li:hover{ background:none; border:none; border-radius:0; box-shadow:none}
.content_wrap .thumb_pg .profiles ul.list-group{ margin-bottom:0}


.content_wrap .home_pg .carousel_mdify{ border-top:1px solid #d5d5d5; padding-top:1px; margin-bottom:15px; padding-bottom:11px; 
background:url(../images/grd_carouseBig.png) center bottom no-repeat; background-size:100% 11px;}
.content_wrap .home_pg .carousel_mdify .carousel-indicators{bottom: -11px;}
.content_wrap .home_pg .carousel_mdify .carousel-indicators li{ width:8px; height:8px; background:#c2c2c3; border:1px solid #c5c5c6;
-moz-box-shadow: 0 2px 1px #f8f8f8, inset 1px 2px 1px #9a9a9b;
-webkit-box-shadow: 0 2px 1px #f8f8f8, inset 1px 2px 1px #9a9a9b;
box-shadow: 0 2px 1px #f8f8f8, inset 1px 2px 1px #9a9a9b;
}
.content_wrap .home_pg .carousel_mdify .carousel-indicators .active{ width:8px; height:8px; margin:1px; background:#cc006f; border:none}
.content_wrap .home_pg .carousel_mdify .carousel-control{ height:94%}


.content_wrap .album_pg{margin-top: -5px; background:#d6d6d6}
.content_wrap .album_pg .carousel_mdify .carousel-caption{ width:100%; z-index:9; right:0; left:0; bottom:0; padding:10px 5px 5px;
background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */
}
.content_wrap .album_pg .carousel_mdify h3{ font:normal 14px/120% 'JannaLT-Regular', Arial, Helvetica, sans-serif; text-shadow:none; color:#fcfcfc}
.content_wrap .album_pg .carousel_mdify p a{ font-size:10px; margin:0 0 5px 2px; display:inline-block; padding:2px 5px; text-shadow:none; color:#fcfcfc; background:#ba106b;
-webkit-border-radius:5px;
-moz-border-radius:5px;
border-radius:5px;}
.content_wrap .album_pg .carousel_mdify .carousel-control.right, .content_wrap .album_pg .carousel_mdify .carousel-control.left{ background-image:none; filter:none}
.content_wrap .album_pg .pic_num{ font-size:12px; display:inline-block; padding:0; margin:0; z-index:9; position:absolute; top:15px; right:10px; color:#fcfcfc}
.content_wrap .album_pg .post_list{ background:#000000; padding:5px 0; border-top:none}
.content_wrap .album_pg .post_list h3{ color:#fcfcfc}
.album_pg .rpeat_div{ margin:10px 0 15px;}
.album_pg .rpeat_btn{ padding:0; font:normal 16px/100% 'JannaLT-Bold', Arial, Helvetica, sans-serif; text-shadow:1px 1px #8a0045; color:#fcfcfc; border:none;
background: rgb(188,0,104); /* Old browsers */
background: -moz-linear-gradient(top,  rgba(188,0,104,1) 0%, rgba(174,0,96,1) 40%, rgba(153,0,84,1) 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(188,0,104,1)), color-stop(40%,rgba(174,0,96,1)), color-stop(100%,rgba(153,0,84,1))); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top,  rgba(188,0,104,1) 0%,rgba(174,0,96,1) 40%,rgba(153,0,84,1) 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top,  rgba(188,0,104,1) 0%,rgba(174,0,96,1) 40%,rgba(153,0,84,1) 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top,  rgba(188,0,104,1) 0%,rgba(174,0,96,1) 40%,rgba(153,0,84,1) 100%); /* IE10+ */
background: linear-gradient(to bottom,  rgba(188,0,104,1) 0%,rgba(174,0,96,1) 40%,rgba(153,0,84,1) 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bc0068', endColorstr='#990054',GradientType=0 ); /* IE6-9 */
}
.album_pg .rpeat_btn .fa-repeat{ vertical-align:middle; display:inline-block; padding:6px; border-left:1px solid #7f0043;
-moz-transform: scaleY(-1);
    -webkit-transform: scaleY(-1);
    -o-transform: scaleY(-1);
    transform: scaleY(-1);
    -ms-filter: flipv; /*IE*/
    filter: flipv; /*IE*/}
.album_pg .rpeat_btn .txt{display:inline-block; padding:6px; border-right:1px solid #cb428d}

menu{ padding:0; margin:0;}
.menu_wrap ul.left_menu, .menu_wrap ul.left_menu li{ border-radius:0; box-shadow:none}
.menu_wrap ul.left_menu li{ padding:0; border-left:2px solid #9e1f63; border-right:none /*1px solid #aaaaaa*/}
.menu_wrap ul.left_menu li .arrow-right{ visibility:hidden}
.menu_wrap ul.left_menu li a{ display:inline-block; padding:11px 0; width:100%; font:normal 14px/100% 'JannaLT-Bold', Arial, Helvetica, sans-serif; 
color:#1d1d1d; border-right:2px solid #ffffff}
.menu_wrap ul.left_menu li:hover, .menu_wrap .list-group-item.active, .menu_wrap .list-group-item.active:hover, 
.menu_wrap .list-group-item.active:focus{ background:#9e1f63; border-top-color:#aaaaaa;}
.menu_wrap ul.left_menu li:hover .arrow-right, .menu_wrap .list-group-item.active .arrow-right, .menu_wrap .list-group-item.active:hover .arrow-right, 
.menu_wrap .list-group-item.active:focus .arrow-right{ visibility:visible}

.menu_wrap ul.left_menu li:hover a, .menu_wrap .list-group-item.active a, .menu_wrap .list-group-item.active:hover a, .menu_wrap .list-group-item.active:focus a{ text-shadow:none; color:#fcfcfc; border-right:2px solid #ffffff}

.menu_wrap .arrow-right{ display:inline-block; margin-left:6px;
	width: 0; 
	height: 0; 
	border-top: 5px solid transparent;
	border-bottom: 5px solid transparent;
	border-right: 5px solid #ffffff;
}


.filter_wrap{ padding:0; margin:0 10px 8px; clear:both}
.filter_wrap .fa-chevron-down{ font-weight:bold; font-size:10px; color:#9e1f63}
.filter_wrap .fa-filter{ font-weight:bold; font-size:15px;}
/* ... */

